# thermal-breathing-detector

./: CMakeLists.txt  nodo_deteccion2.py  package.xml  publicador_filtrado2.cpp
